@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
   <key>EC-Admin</key>
-  <version>1.10.0.49</version>
+  <version>1.10.1.69</version>
   <label>EC-Admin</label>
-  <description>A set of administrative tasks to help manage your server</description>
+  <description>A set of administrative tasks to help manage your server
+2014-07-198 admin Added CHANGELOG creation</description>
   <help>help.xml</help>
   <author>L. Rochette</author>
   <authorUrl>mailto:lrochette@electric-cloud.com</authorUrl>
