@@ -129,7 +129,7 @@
 <body>
     <div class="help">
 		<h1>EC-Admin</h1>
-<p>Plugin Version 1.10.0</p>
+<p>Plugin Version 1.10.1</p>
     	<hr style="margin-left: -10px; margin-top: 10px; height: 1px; width: 100%; color: #5981BD;" noshade="noshade" />
 
         <p>EC-Admin is a collection of administrative procedures to help you
