@@ -8,6 +8,9 @@ $[/myProject/scripts/perlHeaderJSON]
 my $pluginName="$[Plugin]";
 my $project="$[Project]";
 my $version="$[Version]";
+my $description="$[Description]";
+my $comment="$[Comment]";
+
 
 if ($pluginName eq "") {
   $pluginName=$project;
@@ -20,3 +23,18 @@ $ec->setProperty("/myJob/Version", $completeVersion);
 
 # If plugin name is empty default to the projectName
 $ec->setProperty("/myJob/pluginName", ($pluginName ne "") ? $pluginName : $project );
+
+# If description is empty, use the project description
+if ($description eq "") {
+  $description=getP("/projects/$project/description");
+}
+
+if ($comment ne "") {
+  $description .= "\n$[/timestamp YYYY-MM-DD] $[/myJob/launchedByUser] $[comment]";
+}
+$ec->setProperty("/myJob/pluginDescription", $description);
+
+
+
+
+
